
install (FILES rakarrack-plus.desktop
    DESTINATION share/applications)

install (FILES Default.rkrb
    Extra.rkrb
    Extra1.rkrb
    SFX_CC_03.rkrb
    SFX_CC_04.rkrb
    SFX_CC_05.rkrb
    SFX_CC_06.rkrb
    SFX_CC_07.rkrb
    SFX_CC_08.rkrb
    SFX_CC_09.rkrb
    1.wav 
    2.wav 
    3.wav 
    4.wav 
    5.wav
    6.wav 
    7.wav 
    8.wav 
    9.wav
    1.rvb 
    2.rvb 
    3.rvb 
    4.rvb
    5.rvb
    6.rvb
    7.rvb
    8.rvb
    9.rvb
    10.rvb
    1.dly
    2.dly
    3.dly
    4.dly
    5.dly
    6.dly
    7.dly
    8.dly
    9.dly
    10.dly
    11.dly
    bg1.png 
    bg2.png
    bg3.png
    bg4.png
    bg5.png 
    bg6.png
    bg_gray_furr.png
    bg.png
    blackbg.png
    DESTINATION share/rakarrack-plus)



