datadir = $(prefix)/share/${PACKAGE}
data_DATA= Default.rkrb \
	Extra.rkrb \
	1.wav \
	2.wav \
	3.wav \
	4.wav \
	5.wav \
	1.rvb \
	2.rvb \
	3.rvb \
	4.rvb \
	5.rvb \
	6.rvb \
	7.rvb \
	bg1.png \
	bg2.png \
	bg3.png \
	bg4.png \
	bg5.png \
	bg6.png \
	bg_gray_furr.png \
	bg.png

desktopdir = $(prefix)/share/applications
desktop_DATA= rakarrack.desktop


EXTRA_DIST = $(data_DATA) $(desktop_DATA)
